--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,10 @@
 ############################
 
 # Name of website
-title: My website
+title: Justine Dunaway's website
 
 # Your name to show in the footer
-author: Some Person
-
+author: Justine Dunaway
 ###############################################
 # --- List of links in the navigation bar --- #
 ###############################################
@@ -22,9 +21,9 @@ author: Some Person
 navbar-links:
   About Me: "aboutme"
   Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
+    - Williams Softball: "https://ephsports.williams.edu/sports/softball"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  Author's home: "https://www.williams.edu/"
 
 ################
 # --- Logo --- #
@@ -50,7 +49,7 @@ round-avatar: true
 # You can change the order that they show up on the page by changing the order here.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
+  email: "jld6@williams.edu"
   rss: true  # remove this line if you don't want to show an RSS link at the bottom
   facebook: deanattali
   github: daattali
