--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 ############################
 
 # Name of website
-title: My website
+title: Justine Dunaway's website
 
 # Your name to show in the footer
-author: Some Person
+author: Justine Dunaway
 
 ###############################################
 # --- List of links in the navigation bar --- #
@@ -22,9 +22,9 @@ author: Some Person
 navbar-links:
   About Me: "aboutme"
   Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
+    - Williams Softball: "https://ephsports.williams.edu/sports/softball"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  Williams College: "https://www.williams.edu/"
 
 ################
 # --- Logo --- #
