--- a/_config.yml
+++ b/_config.yml
@@ -126,7 +126,7 @@ navbar-var-length: false
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
 page-col: "#AA336A"
-text-col: "#404040"
+text-col: "#FFB6C1"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 navbar-col: "#EAEAEA"
