--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,6 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
   email: "jld6@williams.edu"
-  rss: true  # remove this line if you don't want to show an RSS link at the bottom
   github: daattali
 #  medium: yourname
 #  reddit: yourname or r/yoursubreddit
@@ -267,7 +266,7 @@ defaults:
     values:
       layout: "post"
       comments: true  # add comments to all blog posts
-      social-share: true # add social media sharing buttons to all blog posts
+      social-share: false # add social media sharing buttons to all blog posts
   -
     scope:
       path: "" # any file that's not a post will be a "page" layout by default
